--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="Item_Type.cs" />
     <Compile Include="Phase_Category.cs" />
+    <Compile Include="Phase_Task.cs" />
     <Compile Include="Phone_Numbers.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Supply.cs" />
     <Compile Include="Suppplier.cs" />
     <Compile Include="Task_Category.cs" />
+    <Compile Include="Works_On.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
