--- a/WebApplication1/UI.csproj
+++ b/WebApplication1/UI.csproj
@@ -108,9 +108,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ProjectList.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientDAL.cs" />
+    <Compile Include="ProjectDAL.cs" />
     <Compile Include="Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -125,7 +128,16 @@
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ProjectList.aspx.cs">
+      <DependentUpon>ProjectList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ProjectList.aspx.designer.cs">
+      <DependentUpon>ProjectList.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaffDAL.cs" />
+    <Compile Include="SupervisorDAL.cs" />
     <Compile Include="UIUtility.cs" />
     <Compile Include="UserAccessDAL.cs" />
     <Compile Include="UserConnect.cs" />
